# carbon-marketplace-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose-resolved.yaml  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
ProjectPolice/: Dockerfile  README.md  amqp.Dockerfile  checkAmqp.py  config.py  police.py  pyproject.toml  temporal_worker.Dockerfile
ProjectPolice/config/: .env.example  config.py
ProjectPolice/temporal/: activities.py  run_worker.py  run_workflow.py  worker.py  workflow.py
RabbitMQ/: docker-compose.yml  rabbitmq_config.dockerfile  rabbitmq_config.sh
SchedulerSupervisor/: README.md  amqp_setup.py  pyproject.toml  supervisor.py
SchedulerSupervisor/config/: config.py
buy_project/: README.md  app.Dockerfile  app.py  docker-compose.yml  package-lock.json  pyproject.toml  run_payment_failed_worker.py  run_payment_success_worker.py  temporal_payment_failed.Dockerfile  temporal_payment_success.Dockerfile  temporal_start_payment.Dockerfile
buy_project/config/: config.py
buy_project/temporal/: activities.py
buy_project/temporal/payment_failed/: payment_failed_worker.py
buy_project/temporal/payment_success/: payment_success_workflow.py
deployment/: deployment.yaml  docker-compose.yaml
notify/: .env.example  .gitignore  Dockerfile  README.md  amqp_setup.py  config.py  notify.py  publisher.py  pyproject.toml
notify/tests/: milestone_add.json  milestone_add_verifier.json  milestone_penalise.json  milestone_penalise_seller.json  milestone_reward.json  milestone_reward_seller.json  milestone_upcoming.json  milestone_upcoming_verifier.json  payment_failed.json  payment_failed_buyer.json  payment_success.json  payment_success_buyer_seller.json  project_create.json  project_create_verifier.json  project_verify.json  project_verify_seller.json  test_notify.py
notify/tests/load_users/: buyer.json  seller.json  verifier.json
payments/: README.md  docker-compose.yml  index.ts  package-lock.json  package.json  payments.Dockerfile  tsconfig.json  types.ts
project_police/: amqp.Dockerfile  checkAmqp.py  docker-compose.yml  police.py  run_penalise_reward_worker.py  (+4 more)
scheduler/: Dockerfile  README.md  checkAmqp.py  config.py  docker-compose.yml  publisher.py  pyproject.toml  scheduler.py  start.sh
scheduler/classes/: enums.py
scheduler/config/: rabbitmq_setup.py
search/: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  search.py
search/testPayload/: OffsetReserve.json  Project1.json  Project2.json
(+267 files in other folders)
