[tool.poetry]
name = "schedulersupervisor"
version = "0.1.0"
description = ""
authors = ["Jaylin0312 <68802506+Jaylin0312@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
