[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
pika="^1.3.1"
python-dotenv="^1.0.0"
requests="^2.28.1"
pendulum = "^2.1.2"
celery = "^5.2.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
